--- a/main/css/main.css
+++ b/main/css/main.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box; }
+
 body {
   background-color: #444;
-  color: #ffffff; }
+  color: #ffffff;
+  margin: 0px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height: 100%;
+  line-height: 1.5; }
