--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,19 @@
 $primary-color: #444;
 
+*{
+    box-sizing: border-box;
+}
+
 body{
     background-color: $primary-color;
     color: #ffffff;
+    margin: 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height: 100%;
+    line-height: 1.5;
+}
+
+h1, h2, h3 {
+    margin: 0;
+    font-weight: 400;
 }
