--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,7 +13,19 @@ body{
     line-height: 1.5;
 }
 
-h1, h2, h3 {
+h1, 
+h2, 
+h3 {
     margin: 0;
     font-weight: 400;
+
+    &.lg-heading{
+        font-size: 6rem;
+    }
+
+    &.sm-heading{
+        margin-bottom: 2rem;
+        padding: 0.2rem 1rem;
+        background: lighten($primary-color, 2);
+    }
 }
